tests/positive/basic/to_float_negative_string/input.ci
void main() {
    print(toString(toFloat("-2.5")) + "\n");
}
