tests/negative/semantic/wrong_arg_count_concat/input.ci
void main() {
    print(toString(concat()) + "\n");
}
